# tfg_jljg_ws

./: .gitignore  README.md
src/tfg_jljg_completo/: CMakeLists.txt  package.xml
src/tfg_jljg_completo/launch/: sistema.launch.py
src/tfg_jljg_completo/src/: ackermann.c  emisor_can.c  receptor.c
src/tfg_jljg_inicial/: CMakeLists.txt  package.xml
src/tfg_jljg_inicial/src/: envio_can_ACK.c  envio_can_BASICO.c  receptor_can.c
